# better_colab_MCP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  TODO.md  pyproject.toml
.githooks/: pre-commit
docs/: API_CONVENTIONS.md  EXAMPLES.md  HEADLESS_COOKIE_MODE.md  OPENCODE_COLAB.md  TMUX_CELL_TERMINAL.md  TOOLS.md  TROUBLESHOOTING.md  USAGE.md  steps.md
docs/problems/: 2026-06-06-ascii-scan-problem-log.md  2026-06-06-cdp-inspection-json-result-none.md  2026-06-06-chrome-cdp-timeout-default-profile.md  2026-06-06-colab-browser-connector-false.md  2026-06-06-colab-drive-mount-failed-live.md  2026-06-06-english-conversion-patch-context.md  2026-06-06-fresh-mcp-cell-execution-hang.md  2026-06-06-generated-cell-inner-triple-quote-syntax.md  2026-06-06-generated-cell-newline-escaping.md  2026-06-06-generated-cell-validation-import-path.md  2026-06-06-ghosttown-packed-help-missing-dependency.md  2026-06-06-ghosttown-parallel-source-inspection-race.md  2026-06-06-ghosttown-temp-package-path-missing.md  2026-06-06-ghosttown-tmux-session-not-web-managed.md  2026-06-06-headless-cookie-mode-anonymous-without-real-cookie-file.md  2026-06-06-headless-existing-profile-locked.md  (+58 more)
scripts/: colab_cell_terminal.py  colab_drive_terminal.py  colab_opencode_localhost.py  colab_opencode_supervisor.py  colab_opencode_web_terminal.py  colab_visible_connect.py  launch_colab_drive_terminal.sh
tests/: drive_terminal_wizard_test.py  opencode_localhost_proxy_test.py  opencode_setup_cell_test.py  session_test.py  websocket_server_test.py
(+70 files in other folders)
